Wait on the post subscription

--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -5,3 +5,11 @@
     {{/each}}
   </div>
 </template>
+
+<template name="post1">
+  <div class="posts page">
+    {{#each posts}}
+      {{> postItem}}
+    {{/each}}
+  </div>
+</template>
