--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -15,3 +15,10 @@
 		 <input type="submit" value="Submit" class="btn btn-primary"/>
 	 </form>
 </template>
+
+<template name="accessDenied">
+ <div class="access-denied page jumbotron">
+ <h2>Access Denied</h2>
+ <p>You can't get here! Please log in.</p>
+ </div>
+</template>
