--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -1,7 +1,7 @@
 <template name="postItem">
   <div class="post">
     <div class="post-content">
-      <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
+      <h3><a href="{{url}}">{{title}}</a><span>{{domain}} {{#if email}}(submitted by {{email}}){{/if}}</span></h3>
     </div>
     <a href="{{pathFor 'postPage' title=title}}" class="discuss btn btn-default">Discuss</a>
   </div>
